crates/swc_ecma_parser/tests/flow/invalid_syntax/migrated_0006.js
({a: x, b: y} => 123)
